--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){handleClientLoad()}" onreadystatechange="if (this.readyState === 'complete') this.onload()"></script>
     <title>React App</title>
   </head>
   <body>
